# MoviesCatalogue

./: .gitignore  CMakeLists.txt  README.md  main.cpp  movie_watchlist.csv  movie_watchlist.html  style.css
controller/: Action.cpp  Action.h  MovieError.h  MovieServices.cpp  MovieServices.h
domain/: Movie.cpp  Movie.h
repository/: FileRepository.cpp  Repository.cpp  Repository.h  data.txt  watchlist.txt
ui/: MovieGUI.cpp  MovieGUI.h  MovieUI.cpp  MovieUI.h  MyTableView.cpp  MyTableView.h
